logs/slackbot-wems.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/slackbot_wems'...
Listing './lib/python3.5/site-packages/slackbot_wems/chris'...
Listing './lib/python3.5/site-packages/slackbot_wems/joe'...
Compiling './lib/python3.5/site-packages/slackbot_wems/joe/temp_humidity.py'...
***   File "./lib/python3.5/site-packages/slackbot_wems/joe/temp_humidity.py", line 23
    print temp_f
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/slackbot_wems/wems'...
Listing './lib/python3.5/site-packages/slackbot_wems/wems/bella'...
Listing './lib/python3.5/site-packages/slackbot_wems/wems/clarke'...
Listing './lib/python3.5/site-packages/slackbot_wems/wems/dean'...
Listing './lib/python3.5/site-packages/slackbot_wems/wems/emerson'...
Listing './lib/python3.5/site-packages/slackbot_wems/wems/james'...
Listing './lib/python3.5/site-packages/slackbot_wems/wems/jonathan'...
Listing './lib/python3.5/site-packages/slackbot_wems/wems/kent'...
Listing './lib/python3.5/site-packages/slackbot_wems/wems/meira'...
Listing './lib/python3.5/site-packages/slackbot_wems/wems/morgan'...
Listing './lib/python3.5/site-packages/slackbot_wems/wems/sam'...
Listing './lib/python3.5/site-packages/slackbot_wems/wems/sienna'...
Listing './lib/python3.5/site-packages/slackbot_wems/wems/soumya'...
Listing './lib/python3.5/site-packages/slackbot_wems/wems/viktor'...
Listing './lib/python3.5/site-packages/slackbot_wems/wray'...
Compiling './lib/python3.5/site-packages/slackbot_wems/wray/temp_humidity.py'...
***   File "./lib/python3.5/site-packages/slackbot_wems/wray/temp_humidity.py", line 23
    print temp_f
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/slackbot_wems-0.2.515845057.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
